Strategy ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 ################################################################################
 
 /CashManager/.vs
+/StrategyCode/StrategyExpel/.vs
